// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should support error without axios data 1`] = `
"
Error: boom....
  at Object.<anonymous> (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:16:19)
  at Generator.throw (<anonymous>)
  at step (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:336)
  at /Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:535
  at <anonymous>


Error Message -
  custom error


"
`;

exports[`should work 1`] = `
"
Error: boom....
  at Object.<anonymous> (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:16:19)
  at Generator.throw (<anonymous>)
  at step (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:336)
  at /Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:535
  at <anonymous>


Error Message -
  boom....

Request -
  POST /

Request Data -
  {
    \\"x\\": 1
  }

Response -
  400 Bad Request

Response Data -
  {
    \\"error_status\\": \\"boom....\\"
  }
"
`;

exports[`should work with construct using error instance only 1`] = `
"
Error: boom....
  at Object.<anonymous> (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:16:19)
  at Generator.throw (<anonymous>)
  at step (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:336)
  at /Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:535
  at <anonymous>


Error Message -
  Request failed with status code 400

Request -
  POST /

Request Data -
  {
    \\"x\\": 1
  }

Response -
  400 Bad Request

Response Data -
  {
    \\"error_status\\": \\"boom....\\"
  }
"
`;

exports[`should work with undefined response 1`] = `
"
Error: boom....
  at Object.<anonymous> (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:16:19)
  at Generator.throw (<anonymous>)
  at step (/Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:336)
  at /Users/xxx/messaging-apis/packages/axios-error/src/__tests__/index.spec.js:4:535
  at <anonymous>


Error Message -
  read ECONNRESET

Request -
  POST /

Request Data -
  {
    \\"x\\": 1
  }

"
`;
